# ckyfd

./: Makefile.am  README.md  buildconf  configure.ac
include/: Makefile.am  ckyfd.h
script/: autospacer_fst.sh  config_autospacer.xml  config_lexicon.xml  lexicon_fst.sh  makeautospacer.py  makelexicon.py  makesymbol.py  recover.py  separatechars.py
src/: Makefile.am  ckyfd.cc  test_ckyfd.c  test_ckyfd.cc
wrapper/python/: Makefile.am  pkyfd.c  pkyfd.cc  pkyfd.h  pt.py  rouzeta.py  test.py.in  test_rouzeta.py.in
